(feat) Implement the main content

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 :root {
   --dark-gray: #282c34;
+  --light-gray: #f0f0f0;
+  --light-red: #fbecec;
+  --light-blue: #e8e8ff;
   --true-white: #ffffff;
 }
 
