--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --light-gray: #f0f0f0;
   --light-red: #fbecec;
   --light-blue: #e8e8ff;
+  --light-green: #eafeea;
   --true-white: #ffffff;
 }
 
